force-app/main/default/objects/ContactContactRelation/fields/Relationship_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Explanation__c</fullName>
    <description>Text formula that constructs a sentence explaining the relationship between the two Contacts

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>TEXT(Contact.Salutation) + &quot; &quot; + Contact.FirstName + &quot; &quot; + Contact.LastName
+ &quot; is &quot; +
TEXT(RelatedContact.Salutation) + &quot; &quot; + RelatedContact.FirstName + &quot; &quot; + RelatedContact.LastName + &quot;&apos;s &quot; + PartyRoleRelation.RoleName</formula>
    <inlineHelpText>A sentence that clarifies who&apos;s who in the Relationship. For example, &quot;&apos;s &quot; Joe Ada is Sara Cordova&apos;s employer.&quot;&apos;s &quot; This field is read-only.</inlineHelpText>
    <label>Relationship Explanation</label>
    <type>Text</type>
</CustomField>