force-app/main/default/objects/ContactContactRelation/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Used to query Contact Contact Relationships in Flow

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>PartyRoleRelation.RoleName</formula>
    <inlineHelpText>Role Name from the related Party Role Relationship</inlineHelpText>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>